Updating and adding prelim to repo

--- a/prelim.html
+++ b/prelim.html
@@ -106,7 +106,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <section id="preliminary-preparation" class="level2">
 <h2 class="anchored" data-anchor-id="preliminary-preparation">Preliminary Preparation</h2>
 <p>I want to try something a bit different for this seminar, an “interactive presentation” that you can participate in fully if you wish.</p>
-<p>This requires you to bring a laptop with a few things pre-installed, namely (click on links to get started)</p>
+<p>This requires you to bring a laptop to the seminar with the following items pre-installed (click on links to get started):</p>
 <ol type="1">
 <li><p><a href="https://www.mozilla.org/en-CA/firefox/new/">The Firefox browser</a></p></li>
 <li><p><a href="https://www.r-project.org">R</a> and <a href="https://posit.co/download/rstudio-desktop/">RStudio Desktop</a></p></li>
