--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ Qi Li<sup>3</sup>
     </div>
 </div>
 
-  <p class="date">Updated February 16, 2025</p>
+  <p class="date">Updated February 18, 2025</p>
 </section><section><section id="slide-pro-tips" class="title-slide slide level1 center"><h1>Slide Pro-Tips</h1>
 <div>
 <ul>
@@ -469,12 +469,12 @@ Qi Li<sup>3</sup>
 <ul>
 <li class="fragment"><p>This talk is about a proposed boundary adaptive, polynomial order adaptive, conditional kernel density estimator, and its finite-sample performance.</p></li>
 <li class="fragment"><p>I am aiming for an interactive seminar format, which will require either your participation or your sitting next to someone who is participating.</p></li>
-<li class="fragment"><p>Hopefully you came with your laptop, the Firefox browser, R/RStudio, and a the suggested libraries installed (if you have your laptop you can do this now if you didn’t get the memo).</p></li>
+<li class="fragment"><p>Hopefully you came with your laptop, the Firefox browser, R/RStudio, and the suggested libraries installed (if you have your laptop you can do this now if you didn’t get the <a href="https://jeffreyracine.github.io/bk/prelim.html">memo</a>).</p></li>
 <li class="fragment"><p>If you have R/RStudio and the libraries installed, you can work with the methods and data interactively as the talk proceeds.</p></li>
 <li class="fragment"><p>My hope is that you will follow along and reproduce the results on your own computer.</p></li>
 <li class="fragment">
 <p>Let’s begin by opening the following link in Firefox:</p>
-<p><a href="https://jeffreyracine.github.io/bk">https://jeffreyracine.github.io/bk</a></p>
+<p><a href="https://jeffreyracine.github.io/bk" class="uri">https://jeffreyracine.github.io/bk</a></p>
 </li>
 </ul></section><section id="overview-of-talk-1" class="slide level2 center"><h2>Overview of Talk</h2>
 <ul>
@@ -491,22 +491,23 @@ Qi Li<sup>3</sup>
 </li>
 <li class="fragment">
 <p>An R package is available at:</p>
-<p><a href="https://github.com/JeffreyRacine/bkcde">https://github.com/JeffreyRacine/bkcde</a></p>
+<p><a href="https://github.com/JeffreyRacine/bkcde" class="uri">https://github.com/JeffreyRacine/bkcde</a></p>
 </li>
 </ul></section></section><section><section id="unconditional-density-estimation-with-bounded-data" class="title-slide slide level1 center"><h1>Unconditional Density Estimation with Bounded Data</h1>
 
 </section><section id="kde-with-bounded-data" class="slide level2 center"><h2>KDE with Bounded Data</h2>
 <ul>
 <li class="fragment"><p>Kernel density estimation has a rich history <span class="citation" data-cites="ROSENBLATT:1956 PARZEN:1962">(<a href="#/references-scrollable" role="doc-biblioref" onclick="">Rosenblatt 1956</a>; <a href="#/references-scrollable" role="doc-biblioref" onclick="">Parzen 1962</a>)</span></p></li>
-<li class="fragment"><p>Assuming smoothness, an unknown density <span class="math inline">\(f(x)\)</span> can be estimated using a local average of weight (kernel) functions, <span class="math display">\[\begin{equation*}
+<li class="fragment"><p>Assuming smoothness, an unknown density <span class="math inline">\(f(x)\)</span> can be estimated using a local average of weight (“kernel”) functions, <span class="math display">\[\begin{equation*}
 \hat f(x)=\frac{1}{n}\sum_{i=1}^n \frac{1}{h}K\left(\frac{x-X_i}{h}\right),
 \end{equation*}\]</span> where <span class="math inline">\(K(\cdot)\)</span> is a kernel function, <span class="math inline">\(h\)</span> is a bandwidth, and <span class="math inline">\(X_i\)</span> are the data</p></li>
 </ul>
 <!-- -   For consistency we typically require the bandwidth to vanish asymptotically ($h\to 0$ as $n\to\infty$) --><ul>
 <li class="fragment"><p>However, in the presence of finite bounds (e.g., <span class="math inline">\(X\in[a,b]\)</span>, <span class="math inline">\(a&lt;b\)</span>, <span class="math inline">\(|a|&lt;\infty\)</span>, <span class="math inline">\(|b|&lt;\infty\)</span>) “classical” kernels (e.g., Gaussian, Epanechnikov) can behave poorly at the boundary of support; <span class="math inline">\(\hat f(x)\)</span> may converge very slowly at or near boundaries, or even be inconsistent</p></li>
 <li class="fragment"><p>This artifact is known as the “edge” or “boundary” effect</p></li>
+<li class="fragment"><p>Let’s examine this feature via some interactive illustrations</p></li>
 </ul></section><section id="example-of-kde-with-bounded-data---boundary-bias" class="slide level2 center"><h2>Example of KDE with Bounded Data - Boundary Bias</h2>
-<p>We simulate two datasets, one <span class="math inline">\(N(0,1)\)</span> and one <span class="math inline">\(U[0,1]\)</span>, and use data-driven methods of bandwidth selection with a “classical” Gaussian kernel.</p>
+<p>We simulate two datasets, one <span class="math inline">\(N(0,1)\)</span> and one <span class="math inline">\(U[0,1]\)</span>, and use data-driven methods of bandwidth selection with a “classical” Gaussian kernel to estimate unknown smooth densities, <span class="math inline">\(f(x)\)</span></p>
 <div class="callout callout-note callout-titled callout-style-simple">
 <div class="callout-body">
 <div class="callout-title">
